[package]
name = "practise_0"
version = "0.1.0"
edition = "2021"
# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy={version="0.14.2",features=["jpeg"]}
bevy_asset_loader={version="0.21.0",features=["2d"]}
bevy_lunex = "0.2.4"

